--- a/rtd_performance/rtd_performance.csproj
+++ b/rtd_performance/rtd_performance.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stop.cs" />
     <Compile Include="Trip.cs" />
+    <Compile Include="Route.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
